fix(style): image wraper full size

--- a/src/components/auto-image/single-image.less
+++ b/src/components/auto-image/single-image.less
@@ -52,6 +52,7 @@
 
 .single-image {
   height: 100%;
+  width: inherit;
   display: flex;
   justify-content: center;
   align-items: center;
